# Breeze

./: .editorconfig  .env  .env.example  .env.proxy  .fvmrc  .gitattributes  .gitignore  .puro.json  AGENTS.md  CHANGELOG.md  DOWNLOAD_CHAPTER_ROUTING_REFACTOR.md  GIT_EOL_SETUP.md  README.md  analysis_options.yaml  devtools_options.yaml  firebase.json  opencode.json  pubspec.yaml  session-ses_3044.md  slang.yaml
.cursor/: mcp.json
.githooks/: pre-commit
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  usage_question.yml
.github/workflows/: build-android copy.yml  build-android.yml  build-debug.yml  flatpak-build.yml  push-build.yml  release.yml  release_to_telegram.yml  signpath-smoke.yml  test-ios-build.yml  test_macos_build.yml  test_windows.yml  update-tag-on-release.yml
aidoku-upscale-cli/: .gitignore  Package.resolved  Package.swift  README.md
android/: .gitignore  Breeze-key.keystore  build.gradle  build.gradle.kts  gradle.properties  key.properties  settings.gradle  settings.gradle.kts
android/app/: build.gradle  build.gradle.kts  google-services.json
android/app/src/main/cpp/waifu2x_cli/: CMakeLists.txt
api/: bika.md
asset/: about_page.html
docs/: android_realsr_build.md  folder_operations.md  frb_and_cpp_bridge_design.md  pcre2_rquickjs_build.md  sync_logic.md
flatpak/: io.github.windy.breeze.desktop  io.github.windy.breeze.yml  pack.sh
hook/: build.dart
integration_test/: coreml_upscale_test.dart  real_sr_android_test.dart  simple_test.dart
ios/: REALSR_IOS_DESIGN.md
ios/Runner/: AppDelegate.swift  (+1 more)
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart
linux/: CMakeLists.txt
plugin/: config.json  plugins_data.json
plugin-dev-docs/: README.md  package.json  pnpm-lock.yaml  temp.md
realsr-assets-npm/: .npmignore  package.json
rquickjs_playground/: .gitignore  BOA_MIGRATION_ASSESSMENT.md  Cargo.toml  HOST_RUNTIME_CONTEXT_POOL_DESIGN.md  README.md
rquickjs_playground/docs/: WPT_FETCH_DELTA.md  WPT_FETCH_REPORT.md  i18n.md  intl.md
rquickjs_playground/examples/: concurrent_100_file_ops.rs  concurrent_100_requests.rs  demo.rs  http_plugin_pool.rs  runtime_drop_pending_waiter.rs  tokio_plugin_pool.rs
rquickjs_playground/js/: 00_bootstrap.js  04_runtime_base_polyfills.js  05_structured_clone.js  06_url.js  07_intl.js  10_headers.js  20_abort.js  30_fetch.js  50_fs.js  60_native.js  61_wasi.js  62_bridge.js  63_stack_hook.js  65_console.js  70_temporal.js  99_exports.js  THIRD_PARTY_TEMPORAL_POLYFILL.LICENSE
rquickjs_playground/locales/en-US/: messages.ftl
rquickjs_playground/locales/zh-CN/: messages.ftl
rquickjs_playground/pnpm_demo/: build-cases.mjs  package.json  pnpm-lock.yaml  run-cases-node.mjs  tsconfig.json
rquickjs_playground/pnpm_demo/cases/: axios.ts  bridge.ts  fetch.ts  fs.ts  native.ts  runtime.ts  runtime_api.ts  wasi.ts
rquickjs_playground/pnpm_demo/src/: index.ts  runtime-api.ts  runtime-api.typecheck.ts  runtime-base-polyfills.entry.js  structured-clone-polyfill.entry.js  url-polyfill.entry.js
rquickjs_playground/pnpm_demo/types/: base64.d.ts  breeze-html.d.ts  bridge.d.ts  crypto.d.ts  fs.d.ts  index.d.ts  native.d.ts  runtime-api.ts  runtime-api.typecheck.ts  runtime-globals.d.ts  runtime.d.ts  type.d.ts
rquickjs_playground/scripts/: analyze_wpt_delta.py  compare_wpt_node.js
rquickjs_playground/src/: host_runtime.rs  i18n.rs  lib.rs  source_map.rs  web_runtime.rs
rquickjs_playground/src/html/: js_binding.rs  mod.rs
rquickjs_playground/src/tests/: compat.rs  fetch.rs  fs.rs  mod.rs  native.rs  runtime.rs  support.rs  task_runtime.rs
rquickjs_playground/src/web_runtime/: bridge.rs  bridge_crypto.rs  crypto_ops.rs  fs_ops.rs  http.rs  intl.rs  native_buffer.rs  state.rs  url_headers.rs  wasi.rs
rquickjs_playground/tests/: intl_datetime_smoke.rs  temporal_smoke.rs  test262_temporal.rs  test262_temporal_expected_failures.txt  wpt_fetch.rs
rquickjs_playground/tests/fixtures/: breeze-plugin-example.bundle.cjs
rust/: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml
rust/.cargo/: config.toml
rust/js/jm_http_bundle/: dev-server.ts  package.json  pnpm-lock.yaml  rspack.config.ts  rspack.shared.ts  tsconfig.json
rust/js/jm_http_bundle/src/: client.ts  codec.ts  constants.ts  errors.ts  host-bridge.ts  index.ts  request-config.ts  state.ts  types.ts  utils.ts
rust/qjs_bika/: package.json  pnpm-lock.yaml  tsconfig.json
rust/qjs_bika/src/: index.ts
rust/segmentation_wasi/: Cargo.toml  README.md
rust/segmentation_wasi/src/: lib.rs  main.rs
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: bika.rs  data_backup.rs  error.rs  http.rs  image.rs  jm.rs  js.rs  localization.rs  logger.rs  memory.rs  mod.rs  qjs.rs  simple.rs  system.rs  user_utils.rs  webdav.rs
rust/src/compressed/: compressed.rs  mod.rs
rust/src/decode/: decode.rs  mod.rs  segmentation.rs
rust/src/image_decode/: decode.rs  mod.rs
rust/src/js/: jm.rs  mod.rs
rust/src/memory/: memory_tracker.rs  mod.rs
rust/src/qjs/: mod.rs
rust_builder/: pubspec.yaml
script/: README_i18n.md  android_build_utils.py  apply_i18n.js  build_android_ncnn_models.py  build_apk.dart  build_apk.ps1  build_linux_flatpak.dart  build_ncnn_android.py  build_ncnn_static_android.py  build_waifu2x_cli_android.py  build_windows.dart  check_i18n_keys.js  check_relative_imports.py  code_generate.dart  code_generate.ps1  convert_realcugan_coreml.py  download_android_ncnn_deps.dart  download_realsr_assets.dart  fix_package_imports.py  i18n_extract.js  i18n_strings.txt  i18n_translations.tsv  prepare_android_waifu2x_deps.py  scan_unused_deps.py  script.sh  tmp_scan_han.js  translate_messages.js
symbols/: .gitignore  update_symbols.dart
test/: test_helper.dart  widget_test.dart
update-tag-version/: index.js  latest-release.json  package.json  pnpm-lock.yaml
web_read/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
web_read_server/: Cargo.toml
windows/: CMakeLists.txt
windows-installer/: package.json  pnpm-lock.yaml  pnpm-workspace.yaml
(+1228 files in other folders)
