[package]
name = "rquickjs_playground"
version = "0.1.0"
edition = "2024"

[features]
default = ["host-fs"]
host-fs = []
wasi = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
rquickjs = { version = "0.11.0", features = ["bindgen"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.6"
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
] }
reqwest = { version = "0.12.28", default-features = false, features = [
    "json",
    "stream",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "rustls-tls",
    "system-proxy",
    "socks",
] }
anyhow = "1.0.98"
tracing = "0.1.41"
base64 = "0.22.1"
filetime = "0.2.26"
getrandom = "0.3.4"
hmac = "0.12.1"
sha2 = "0.10.9"
md5 = "0.8.0"
aes = "0.8.4"
ecb = "0.1.2"
flate2 = "1.1.2"
wasmtime = { version = "42.0.1", optional = true }
wasmtime-wasi = { version = "42.0.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"

[dev-dependencies]
tiny_http = "0.12.0"
wat = "1.245.1"
