[package]
name = "rquickjs_playground"
version = "0.1.0"
edition = "2024"

[features]
default = ["host-fs"]
host-fs = []

[dependencies]
rquickjs = { version = "0.11.0", features = ["bindgen", "futures", "parallel", "loader"] }
serde_json = "1.0.145"
serde = { version = "1.0.228", features = ["derive"] }
axum = "0.8.6"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "rt",
    "macros",
    "sync",
    "time",
] }
reqwest = { version = "0.13.3", default-features = false, features = [
    "http2",
    "json",
    "stream",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "rustls",
    "system-proxy",
    "socks",
] }
anyhow = "1.0.98"
tracing = "0.1.41"
base64 = "0.22.1"
filetime = "0.2.26"
getrandom = "0.3.4"
hmac = "0.12.1"
sha1 = "0.10.6"
sha2 = "0.10.9"
pbkdf2 = "0.12.2"
uuid = { version = "1.18.1", features = ["v4", "fast-rng"] }
url = "2.5.7"
md5 = "0.8.0"
aes = "0.8.4"
cbc = "0.1.2"
aes-gcm = "0.10.3"
flate2 = "1.1.2"
srcmap-sourcemap = "0.3.6"

[target.'cfg(windows)'.dependencies]
windows-registry = "0.6.1"

[dev-dependencies]
tiny_http = "0.12.0"
