[package]
name = "windcore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.11.1"
image = { version = "0.25.6", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
md5 = "0.8.0"
base64 = "0.22.1"
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
env_logger = "0.11.8"
anyhow = "1.0.98"
serde_json = "1.0"
tokio = { version = "1.46.1", features = ["full"] }
tokio-tar = "0.3.1"
zip = { version = "8.2.0", default-features = false, features = [
    "deflate",
    "time",
] }
zhconv = "0.4.1"
lazy_static = "1.5.0"
flate2 = "1.1.9"
zstd = "0.13.3"
rquickjs_playground = { path = "../rquickjs_playground" }
chrono = "0.4.44"
terminal_size = "0.4.3"
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tracing-logcat = "0.1.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = "0.2.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

[build-dependencies]
ureq = "2.10.1"
