[package]
name = "windcore"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"
image = { version = "0.25.10", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
md5 = "0.8.0"
base64 = "0.22.1"
log = "0.4.33"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
tracing-log = "0.2"
tracing-appender = "0.2.5"
env_logger = "0.11.10"
anyhow = "1.0.102"
dashmap = "6.1.0"
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "http2",
    "json",
    "query",
    "stream",
    "charset",
    "gzip",
    "brotli",
    "deflate",
    "zstd",
    "cookies",
    "multipart",
    "rustls",
    "system-proxy",
    "socks",
] }
reqwest_dav = "0.3.3"
url = "2.5.8"
tokio-tar = "0.3.1"
zip = { version = "8.2.0", default-features = false, features = [
    "deflate",
    "time",
] }
zhconv = "0.4.1"
lazy_static = "1.5.0"
flate2 = "1.1.9"
zstd = "0.13.3"
rquickjs_playground = { path = "../rquickjs_playground" }
chrono = "0.4.45"
iana-time-zone = "0.1.61"
sys-locale = "0.3.2"
tz-rs = "0.7.3"
icu_locale = { version = "2.2.0", features = ["compiled_data"] }
icu_time = "2.2.0"
terminal_size = "0.4.4"
ferrous-opencc = { version = "0.4.0", features = ["japanese-conversion"] }
brotli = "8.0.4"
sevenz-rust = "0.6.1"
webp = "0.3.1"
serde = { version = "1.0.228", features = ["derive"] }
serde-xml-rs = "0.8.2"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"
tracing-logcat = "0.1.0"
jni = "0.22.4"
rustls-platform-verifier = "0.7.0"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
oslog = "0.2.0"

[build-dependencies]
ureq = "3.3.0"

[profile.dev]
# 关闭调试符号生成
debug = 0

# 减少中间产物
opt-level = 1

# 减少增量编译生成的碎片文件
incremental = true

# 临时 patch：rquickjs-sys 0.12.0 在 Windows 交叉编译 Android 时，
# host 构建会错误使用 Android NDK 的 libclang 生成绑定，导致 JSValue 类型不匹配。
# 详见：https://github.com/DelSkayn/rquickjs/issues/709
[patch.crates-io]
rquickjs-sys = { git = "https://github.com/deretame/rquickjs.git", branch = "fix/android-windows-bindgen" }
